--- a/src/app/client/wodcat/wodcat.page.scss
+++ b/src/app/client/wodcat/wodcat.page.scss
@@ -46,6 +46,9 @@
 .cardimg{
     margin-left: auto;
     margin-right: auto;
+    margin-top: auto;
+   padding-bottom: 10%;
+   padding-top: 10%;
 }
 .cardttl{
     font-size: 150%;
