--- a/src/app/logster/login/login.page.html
+++ b/src/app/logster/login/login.page.html
@@ -67,7 +67,7 @@
             </div>
             <br>
             <!--<div style="text-align: center; font-size: large;">
-              Forgot your password?<a href="" style="padding-left: 2%; color: #b27600;">YES</a>
+              Forgot your password?<a href="/reset-password" style="padding-left: 2%; color: #b27600;">YES</a>
             </div>-->
           </div>
         
