Your commit message here

--- a/src/app/logster/login/login.page.html
+++ b/src/app/logster/login/login.page.html
@@ -66,9 +66,9 @@
               <a href="/signup" style="padding-left: 2%; color: #b27600;">Create account</a>
             </div>
             <br>
-            <!--<div style="text-align: center; font-size: large;">
+            <div style="text-align: center; font-size: large;">
               Forgot your password?<a href="/reset-password" style="padding-left: 2%; color: #b27600;">YES</a>
-            </div>-->
+            </div>
           </div>
         
       </ion-card>
