--- a/src/app/admin/view-wods/view-wods.page.html
+++ b/src/app/admin/view-wods/view-wods.page.html
@@ -25,8 +25,8 @@
     <pre></pre>
     <ion-row>
       <ion-col></ion-col>
-      <ion-col style="text-align: center;"><ion-button shape="round" (click)="todaAdduser()" ><ion-icon name="person"></ion-icon>Add</ion-button></ion-col>
-      <ion-col style="text-align: center;"><ion-button shape="round" (click)="todaAddwod()" ><ion-icon name="add-outline"></ion-icon></ion-button></ion-col>
+      <ion-col style="text-align: center; "><ion-button shape="round" (click)="todaAdduser()" ><ion-icon name="person"></ion-icon>Add User</ion-button></ion-col>
+      <ion-col style="text-align: center;"><ion-button shape="round" (click)="todaAddwod()" ><ion-icon name="add-outline"></ion-icon>WOD</ion-button></ion-col>
     </ion-row>
     <pre></pre>
     <ion-row >
